updated hero slider layout breaking issue

--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,13 @@ body{
         ========================= */
 #heroSlider{
     position: relative;
+    overflow: hidden;
 }
        .slider-img{
 
     width:100%;
 
-    height:90vh;
+    height:100vh;
 
     object-fit:cover;
 
@@ -142,6 +143,7 @@ body{
         .carousel-item{
             position: relative;
             transition: opacity 1.2s ease-in-out;
+            overflow: hidden;
         }
 
         /* DARK OVERLAY */
@@ -207,6 +209,8 @@ body{
 .hero-slider{
     position: relative;
     padding-bottom: 60px;
+    height: 100vh;
+      overflow:hidden;
 }
 .slider-controls{
 
@@ -225,7 +229,7 @@ body{
     gap:15px;
 
     z-index:20;
-
+overflow: hidden;
 }
 
 .custom-slider-btn{
@@ -731,6 +735,15 @@ body{
     gap: 40px;
    
 }
+   .slider-img{
+
+    width:100%;
+
+    height:100vh;
+
+    object-fit:cover;
+
+}
 }
 @media (max-width: 767px){
 
@@ -809,7 +822,15 @@ body{
         font-size: 16px;
 
     }
+   .slider-img{
 
+    width:100%;
+
+    height:100vh;
+
+    object-fit:cover;
+
+}
 }
 
 /* =========================
